Iau server upgrade #1214471 keichwa (#2441)
* incomplete rename; new name: upgrade-intro.adoc
* use examples according to
  https://bugzilla.suse.com/show_bug.cgi?id=1214471

--- a/modules/installation-and-upgrade/pages/server-y.adoc
+++ b/modules/installation-and-upgrade/pages/server-y.adoc
@@ -6,7 +6,8 @@ This is often referred to as a product migration, service pack migration, or SP 
 This procedure does not replace the server with an updated copy.
 It is an in-place upgrade.
 
-Example: [literal]``4.2.x`` → [literal]``4.3.0`` or [literal]``4.1.x`` → [literal]``4.3.0`
+Examples:
+* [literal]``4.2.x`` → [literal]``4.3.0`` or [literal]``4.1.x`` → [literal]``4.3.0`
 
 The upgrade from version 4.1 to 4.3 will also upgrade the base OS from {sles} 15 SP2 to {sles} 15 SP4, and the PostgreSQL database from version{nbsp}12 to 14 with an additional step.
 For more information about the database upgrade, see xref:installation-and-upgrade:db-migration-xy.adoc[].
@@ -28,7 +29,10 @@ It takes a copy of the old database, thus be sure to have at least enough space 
 ====
 
 
-
+////
+// FIXME: For 5.0/5.1, this could probably be deleted
+//        server-migrator.sh ???
+////
 == Preparing Upgrade to 4.3
 
 Before you start the upgrade process you must deactive the Python 2 module ([package]``sle-module-python2``) on the old 4.1.x or 4.2.x {productname} Server.
