--- a/modules/installation-and-upgrade/pages/server-intro.adoc
+++ b/modules/installation-and-upgrade/pages/server-intro.adoc
@@ -17,7 +17,7 @@ Major Version Upgrade (X Upgrade)::
 Such a major upgrade usually is an upgrade from X.Y to X+1.0 or to X+1.1, where Y is the latest minor version of the X series.
 For example:
 
-* From version 3.2 to 4.0 or to 4.1 (upgrading directly from 3.2 to 4.2 or later is s not supported).
+* From version 3.2 to 4.0 or to 4.1 (upgrading directly from 3.2 to 4.2 or later is not supported).
 
 * See xref:installation-and-upgrade:server-x.adoc[].
 
