--- a/modules/common-workflows/nav-common-workflows-guide.adoc
+++ b/modules/common-workflows/nav-common-workflows-guide.adoc
@@ -15,11 +15,13 @@ ifeval::[{suma-content} == true]
 ** xref:workflow-inplace-sles-upgrade.adoc[In-place Upgrade]
 endif::[]
 
+** xref:workflow-product-migration-webui.adoc[NEW NEW NEW Product migration via {webui}]
+
 ifeval::[{suma-content} == true]
 ** xref:workflow-removing-channel.adoc[Removing channel]
 endif::[]
 
-** xref:workflow-sp-upgrade-webui.adoc[SP Upgrade via {webui}]
+//** xref:workflow-sp-upgrade-webui.adoc[SP Upgrade via {webui}]
 
 ifdef::backend-pdf[]
 include::modules/ROOT/pages/common_gfdl1.2_i.adoc[leveloffset=+1]
