--- a/modules/common-workflows/nav-common-workflows-guide.adoc
+++ b/modules/common-workflows/nav-common-workflows-guide.adoc
@@ -15,7 +15,7 @@ ifeval::[{suma-content} == true]
 ** xref:workflow-inplace-sles-upgrade.adoc[In-place Upgrade]
 endif::[]
 
-** xref:workflow-product-migration-webui.adoc[Product migration via {webui}]
+** xref:workflow-product-upgrade-webui.adoc[Product upgrade via {webui}]
 
 ifeval::[{suma-content} == true]
 ** xref:workflow-removing-channel.adoc[Removing channel]
