--- a/modules/specialized-guides/pages/public-cloud-guide/payg/payg-configure-the-image.adoc
+++ b/modules/specialized-guides/pages/public-cloud-guide/payg/payg-configure-the-image.adoc
@@ -1,1 +1,11 @@
 = Configure the image on EC2
+
+This section covers initial preparation and configuration of the image.
+
+.Procedure: Configure your {productname} instance
+
+. Log into the {aws} Landing zone.
+. Select your account. 
+. Select **Management Console**.
+. Select **EC2**.
+
