--- a/modules/specialized-guides/pages/public-cloud-guide/payg/payg-find-the-aws-image.adoc
+++ b/modules/specialized-guides/pages/public-cloud-guide/payg/payg-find-the-aws-image.adoc
@@ -17,34 +17,31 @@ Follow these step-by-step instructions to locate the SUSE Manager {productnumber
 
 . Access the **AWS Marketplace**:
 
-* In the EC2 dashboard, on the left sidebar, you'll find the “Launch Instance” button. Click it.
+* In the EC2 dashboard, in the main content section, you'll find the “Launch Instance” button. Click it.
 * This will lead you to the “Choose an Amazon Machine Image (AMI)” page.
-* Click on the "AWS Marketplace" tab on the left.
+* Select **Browse more AMIs**
+* Search for **SUSE Manager**
+* Depending on your location select your AMI image. **SUSE Manager Server Family (EU and UK only)** or **SUSE Manager Server Family (non-EU and non-UK-only)**.
 
-. Search for SUSE Manager {productnumber} {payg} Image:
+. Click **Select**.
 
-* In the search bar, type "SUSE Manager {productnumber} {payg}" and press Enter.
-* You should now see a list of available AMIs related to your search.
+. Name your Server.
 
-. Select the Image:
+* Once you have selected the image, you can review the details and pricing information provided. 
 
-* Locate the correct SUSE Manager {productnumber} {payg} image from the results.
-* Click on the "Select" button to the right of the image listing.
-
-. Review and Launch:
-
-* Once you’ve selected the image, you can review the details and pricing information provided.
-* Proceed by clicking the "Continue" or "Review and Launch" button, depending on the next steps you wish to take.
-
-. Additional Configuration (Optional):
+. Additional Configuration:
 
 * If you wish to configure instance details, storage, tags, or security groups, you can do so in the subsequent steps.
+* The image automatically suggests a default CPU configuration.
+* Choose an existing key pair or create a new one to provide access to the instance.
+* Your organization should provide the security groups and network configuration.
+* Provide at least 200 GB of storage for the server.
 * Follow the AWS prompts to complete these configurations as needed.
 
 . Launch the Instance:
 
-* After reviewing and making any necessary configurations, click the “Launch” button.
-* Choose an existing key pair or create a new one to access the instance.
+* After reviewing and making any necessary configurations, click the **Launch instance** button.
+
 * Click on the "Launch Instances" button.
 
 . Verify the Launch:
