--- a/modules/specialized-guides/pages/public-cloud-guide/payg/payg-configure-the-image.adoc
+++ b/modules/specialized-guides/pages/public-cloud-guide/payg/payg-configure-the-image.adoc
@@ -4,8 +4,34 @@ This section covers initial preparation and configuration of the image.
 
 .Procedure: Configure your {productname} instance
 
-. Log into the {aws} Landing zone.
-. Select your account. 
-. Select **Management Console**.
-. Select **EC2**.
+
+. Once you have selected the AMI image **Name** your Server.
+
+* Review the details and pricing information provided. 
+
+. Additional Configuration:
+
+* If you wish to configure instance details, storage, tags, or security groups, you can do so in the subsequent steps.
+* The image automatically suggests a default CPU configuration.
+* Choose an existing key pair or create a new one to provide access to the instance.
+* Your organization should provide the security groups and network configuration.
+* Provide at least 200 GB of storage for the server.
+* Follow the AWS prompts to complete these configurations as needed.
+
+. Launch the Instance:
+
+* After reviewing and making any necessary configurations, click the **Launch instance** button.
+
+* Click on the "Launch Instances" button.
+
+. Verify the Launch:
+
+* You'll be redirected to the EC2 Dashboard.
+* Under “Instances” on the left sidebar, you should see your newly launched SUSE Manager {productnumber} {payg} instance running.
+
+[NOTE] 
+.Usage and Costs
+====
+Keep in mind that since this is a {payg} image, you will be billed according to your actual usage, including the number of systems you manage and monitor with this instance. It's essential to regularly track and review your usage to prevent any unexpected costs and ensure alignment with your budgeting needs.
+====
 
