--- a/modules/specialized-guides/pages/public-cloud-guide/payg/payg-find-the-aws-image.adoc
+++ b/modules/specialized-guides/pages/public-cloud-guide/payg/payg-find-the-aws-image.adoc
@@ -1,4 +1,4 @@
-= Finding the SUSE Manager {productnumber} {payg} Image on AWS
+= Finding the SUSE Manager Server {productnumber} {payg} Image on AWS
 
 Follow these step-by-step instructions to locate the SUSE Manager {productnumber} {payg} image on AWS:
 
