--- a/modules/specialized-guides/pages/public-cloud-guide/payg/payg-initial-setup.adoc
+++ b/modules/specialized-guides/pages/public-cloud-guide/payg/payg-initial-setup.adoc
@@ -1,1 +1,19 @@
 = Initial setup
+
+The next step will be to ssh into your {AWS} instance.
+
+.Procedure: Server Setup using SSH
+. ssh into the running instance.
+
+. Prior to running setup, update the system.
+
+* Execute 
++
+
+```
+sudo zypper ref
+sudo zypper up
+```
+
+
+
