--- a/modules/common-workflows/pages/workflow-product-upgrade-webui.adoc
+++ b/modules/common-workflows/pages/workflow-product-upgrade-webui.adoc
@@ -23,7 +23,7 @@ image::upgradesles01.png[scaledwidth=80%]
 . Click btn:[Add Products].
 +
 image::upgradesles02.png[scaledwidth=80%]
-. Navigate to menu:Systems[Registered client > Software > SP Migration].
+. Navigate to menu:Systems[Registered client > Software > Product Migration].
   You will see two targets, SP4 and SP5. 
 +
 image::upgradesles03.png[scaledwidth=80%]
