--- a/modules/common-workflows/pages/workflow-product-upgrade-webui.adoc
+++ b/modules/common-workflows/pages/workflow-product-upgrade-webui.adoc
@@ -58,6 +58,6 @@ ANSI_COLOR="0;32"
 CPE_NAME="cpe:/o:suse:sles:15:sp5"
 DOCUMENTATION_URL="https://documentation.suse.com/"
 ----
-. On the {productname} {webui} side, you can verify the succesfully completed product upgrade by going to menu:Systems[Registered client > Detail].
+. On the {productname} {webui} side, you can verify the succesfully completed product upgrade by going to menu:Systems[Registered client > Details].
 +
 image::upgradesles06.png[scaledwidth=80%]
