--- a/modules/client-configuration/pages/registration-bootstrap.adoc
+++ b/modules/client-configuration/pages/registration-bootstrap.adoc
@@ -14,7 +14,7 @@ If the repository information does not match exactly, the bootstrap script canno
 [NOTE]
 ====
 All clients need a bootstrap repository.
-It is automatically created and regenerated on the SUSE Manager Server when products are synchronized.
+It is automatically created and regenerated on the {productname} Server when products are synchronized.
 A bootstrap repository includes packages for installing Salt on clients, and for registering Salt or traditional clients.
 
 For more information about creating a bootstrap repository, see xref:client-configuration:bootstrap-repository.adoc[].
