--- a/modules/client-configuration/pages/contact-methods-migrate-traditional.adoc
+++ b/modules/client-configuration/pages/contact-methods-migrate-traditional.adoc
@@ -1,8 +1,12 @@
 [[contact-methods-migrate-trad]]
 = Migrate Traditional Clients to Salt Clients
 
-To migrate a system from a traditional client to a {salt}, the use can create the {salt} bootstrap script and re-register the system with it.
-FIXME: Create, edit, run.
+To migrate a system from a traditional client to a {salt}, the use can create the {salt} bootstrap script and re-register the client system with it.
+This could be done with three procedures: Create a bootstrap script, modify the bootstrap script, and run the bootstrap script to register the client.
+
+
+
+== Create bootstrap script
 
 First you create a bootstrap script with the {webui} as a template.
 
@@ -15,9 +19,14 @@ First you create a bootstrap script with the {webui} as a template.
 . The bootstrap script is generated and stored on the server in the [path]``/srv/www/htdocs/pub/bootstrap`` directory.
   Alternatively, you can access the bootstrap script over HTTPS.
   Replace [literal]``<example.com>`` with the host name of your {productname} Server:
++
 ----
 https://<example.com>/pub/bootstrap/bootstrap.sh
 ----
+
+
+
+== Modify bootstrap script
 
 In the next step, you modify the bootstrap script according as needed.
 It is important that you set your activation key.
@@ -67,7 +76,9 @@ For more information, see xref:client-configuration:contact-methods-saltbundle.a
 
 
 
-As the final step, you use the bootstrap script to register clients.
+== Run bootstrap script
+
+As the final step, you run the bootstrap script to migrate and register clients.
 
 
 .Procedure: Running the Bootstrap Script
