--- a/modules/common-workflows/pages/workflow-product-upgrade-webui.adoc
+++ b/modules/common-workflows/pages/workflow-product-upgrade-webui.adoc
@@ -1,33 +1,29 @@
-[[workflow-sp-upgrade-via-webui]]
-= Service Pack Upgrade via {webui}
+[[workflow-product-upgrade-via-webui]]
+= Product upgrade via {webui}
 
+If you want to upgrade the registered {sle} client pack to a newer product version, it can be done either on the command line or via {webui}.
 
-
-If you want to migrate the registered {sle} client's service pack (SP) to a newer version, it can be done either on the command line or via {webui}.
-
-This document describes and illustrates in detail the migration using the {webui}.
+This document describes and illustrates in detail the product upgrade using the {webui}.
 
 [NOTE]
 ====
-SP versions used are not reflective of the actual latest versions available.
+Product versions used are not reflective of the actual latest versions available.
 They are used for illustration purposes only.
-As an example, the following procedure describes the migration to version 15 SP5 from and older version 15.
+As an example, the following procedure describes the upgrade to version 15 SP5 from and older version 15.
 If you are targeting a different version, select the corresponding channels and versions.
 ====
 
-
-.Procedure: Migrating service pack to a newer version using {webui}
+.Procedure: Upgrading product to a newer version using {webui}
 [role=procedure]
 
-
-. Log in to {productname} {webui} and navigate to menu:Admin[Products] and search for "SUSE Linux Enterprise Server 15 SP5 x86_64"
+. Log in to {productname} {webui} and navigate to menu:Admin[Products] and search for [literal]``SUSE Linux Enterprise Server 15 SP5 x86_64``.
 . Select the recommended channels.
 +
 image::upgradesles01.png[scaledwidth=80%]
 . Click btn:[Add Products].
 +
 image::upgradesles02.png[scaledwidth=80%]
-. Navigate to menu:Systems[registered client > Software > SP Migration].
+. Navigate to menu:Systems[Registered client > Software > Product Migration].
   You will see two targets, SP4 and SP5. 
 +
 image::upgradesles03.png[scaledwidth=80%]
@@ -39,11 +35,11 @@ image::upgradesles04.png[scaledwidth=80%]
 . Click btn:[Schedule Migration] and it will highlight message [literal]``It is better to do a dry run first so continuing with dry run first.``
 . Click btn:[Dry-run] and check the status of the simulation in menu:Events[History].
   You should see a return code [literal]``0`` meaning successful.
-. Now you may click btn:[Schedule Migration] to actually migrate the server.
+. Now you may click btn:[Schedule Migration] to actually upgrade the server.
   Following message will get highlighted on top of the screen in {productname} {webui}.
 +
 image::upgradesles05.png[scaledwidth=80%]
-. When the migration is complete, check the status in menu:Events[History].
+. When the upgrade is complete, check the status in menu:Events[History].
 . On the client side also you can verify it by running:
 +
 ----
@@ -62,6 +58,6 @@ ANSI_COLOR="0;32"
 CPE_NAME="cpe:/o:suse:sles:15:sp5"
 DOCUMENTATION_URL="https://documentation.suse.com/"
 ----
-. On the {productname} {webui} side, you can verify the succesfully completed migration by going to menu:Systems[registered client > Detail].
+. On the {productname} {webui} side, you can verify the succesfully completed product upgrade by going to menu:Systems[Registered client > Details].
 +
 image::upgradesles06.png[scaledwidth=80%]
