Additional changes to the CW product upgrade.

--- a/modules/common-workflows/pages/workflow-product-upgrade-webui.adoc
+++ b/modules/common-workflows/pages/workflow-product-upgrade-webui.adoc
@@ -16,7 +16,7 @@ If you are targeting a different version, select the corresponding channels and 
 .Procedure: Upgrading product to a newer version using {webui}
 [role=procedure]
 
-. Log in to {productname} {webui} and navigate to menu:Admin[Products] and search for [literal]``SUSE Linux Enterprise Server 15 SP5 x86_64``.
+. Log in to {productname} {webui} and navigate to menu:Admin[Setup Wizard > Products] and search for [literal]``SUSE Linux Enterprise Server 15 SP5 x86_64``.
 . Select the recommended channels.
 +
 image::upgradesles01.png[scaledwidth=80%]
@@ -24,7 +24,7 @@ image::upgradesles01.png[scaledwidth=80%]
 +
 image::upgradesles02.png[scaledwidth=80%]
 . Navigate to menu:Systems[Registered client > Software > Product Migration].
-  You will see two targets, SP4 and SP5. 
+  You will see the available targets. 
 +
 image::upgradesles03.png[scaledwidth=80%]
 . Select [literal]``SUSE Linux Enterprise Server 15 SP5 x86_64``.
