--- a/modules/common-workflows/pages/workflow-product-upgrade-webui.adoc
+++ b/modules/common-workflows/pages/workflow-product-upgrade-webui.adoc
@@ -19,28 +19,25 @@ If you are targeting a different version, select the corresponding channels and 
 . Log in to {productname} {webui} and navigate to menu:Admin[Setup Wizard > Products] and search for [literal]``SUSE Linux Enterprise Server 15 SP5 x86_64``.
 . Select the recommended channels.
 +
-image::upgradesles01.png[scaledwidth=80%]
+image::new-upgradesles01.png[scaledwidth=80%]
 . Click btn:[Add Products].
-+
-image::upgradesles02.png[scaledwidth=80%]
 . Navigate to menu:Systems[Registered client > Software > Product Migration].
   You will see the available targets. 
 +
-image::upgradesles03.png[scaledwidth=80%]
+image::new-upgradesles03.png[scaledwidth=80%]
 . Select [literal]``SUSE Linux Enterprise Server 15 SP5 x86_64``.
-  This will expand further as shown below.
-+
-image::upgradesles04.png[scaledwidth=80%]
-. Select [literal]``Target Base Channel`` as [literal]``SLE-Product-SLES15-SP5-Pool for x86_64`` and keep [literal]``Allow Vendor Change`` unchecked.
-. Click btn:[Schedule Migration] and it will highlight message [literal]``It is better to do a dry run first so continuing with dry run first.``
-. Click btn:[Dry-run] and check the status of the simulation in menu:Events[History].
-  You should see a return code [literal]``0`` meaning successful.
-. Now you may click btn:[Schedule Migration] to actually upgrade the server.
-  Following message will get highlighted on top of the screen in {productname} {webui}.
-+
-image::upgradesles05.png[scaledwidth=80%]
+  This will expand further.
+. Select [literal]``Target Base Channel`` as [literal]``SLE-Product-SLES15-SP5-Pool for x86_64``.
+  Keep [literal]``Allow Vendor Change`` unchecked.
+. Click btn:[Schedule Migration].
+  The message will be highlighted [literal]``It is better to do a dry run first so continuing with dry run first.``
+. Click btn:[Dry run] and check the status of the simulation in menu:Events[History].
+  You should see a return code [literal]``0`` indicating a successful dry run.
+. Click btn:[Schedule Migration] to perform the actual product migration.
+  The message will be highlighted on top of the screen indicating the scheduling of the action.
 . When the upgrade is complete, check the status in menu:Events[History].
-. On the client side also you can verify it by running:
+. On the {productname} {webui} side, verify the succesfully completed product upgrade by going to menu:Systems[Registered client > Details].
+. On the client side you can verify it by running:
 +
 ----
 cat /etc/os-release
@@ -58,6 +55,3 @@ ANSI_COLOR="0;32"
 CPE_NAME="cpe:/o:suse:sles:15:sp5"
 DOCUMENTATION_URL="https://documentation.suse.com/"
 ----
-. On the {productname} {webui} side, you can verify the succesfully completed product upgrade by going to menu:Systems[Registered client > Details].
-+
-image::upgradesles06.png[scaledwidth=80%]
