--- a/modules/common-workflows/pages/workflow-product-upgrade-webui.adoc
+++ b/modules/common-workflows/pages/workflow-product-upgrade-webui.adoc
@@ -22,7 +22,7 @@ If you are targeting a different version, select the corresponding channels and 
 image::new-upgradesles01.png[scaledwidth=80%]
 . Click btn:[Add Products].
 . Navigate to menu:Systems[Registered client > Software > Product Migration].
-  You will see the available targets. 
+  You will see the targets available for that registered client. 
 +
 image::new-upgradesles03.png[scaledwidth=80%]
 . Select [literal]``SUSE Linux Enterprise Server 15 SP5 x86_64``.
