Removed SUMA images for Uyuni version of the documentation.

--- a/modules/common-workflows/pages/workflow-product-upgrade-webui.adoc
+++ b/modules/common-workflows/pages/workflow-product-upgrade-webui.adoc
@@ -19,12 +19,20 @@ If you are targeting a different version, select the corresponding channels and 
 . Log in to {productname} {webui} and navigate to menu:Admin[Setup Wizard > Products] and search for [literal]``SUSE Linux Enterprise Server 15 SP5 x86_64``.
 . Select the recommended channels.
 +
+
+ifeval::[{suma-content} == true]
 image::new-upgradesles01.png[scaledwidth=80%]
+endif::[]
+
 . Click btn:[Add Products].
 . Navigate to menu:Systems[Registered client > Software > Product Migration].
   You will see the targets available for that registered client. 
 +
+
+ifeval::[{suma-content} == true]
 image::new-upgradesles03.png[scaledwidth=80%]
+endif::[]
+
 . Select [literal]``SUSE Linux Enterprise Server 15 SP5 x86_64``.
   This will expand further.
 . Select [literal]``Target Base Channel`` as [literal]``SLE-Product-SLES15-SP5-Pool for x86_64``.
