Changes titles cases for the CW book.

--- a/modules/common-workflows/pages/workflow-content-lifecycle-management.adoc
+++ b/modules/common-workflows/pages/workflow-content-lifecycle-management.adoc
@@ -1,5 +1,5 @@
 [[workflow-clm]]
-= Content Lifecycle Management
+= Content lifecycle management
 
 If you are managing a lot of clients and you need to apply customized packages to them, you can use content lifecycle management (CLM) to manage your packages.
 CLM allows you to customize and test packages before updating production clients.
