--- a/modules/common-workflows/nav-common-workflows-guide.adoc
+++ b/modules/common-workflows/nav-common-workflows-guide.adoc
@@ -8,11 +8,11 @@ endif::[]
 
 * xref:common-workflows-overview.adoc[Common Workflows]
 ** xref:workflow-client-onboarding.adoc[Client onboarding]
-** xref:workflow-configuration-management.adoc[Configuration Management]
-** xref:workflow-content-lifecycle-management.adoc[Content Lifecycle Management]
+** xref:workflow-configuration-management.adoc[Configuration management]
+** xref:workflow-content-lifecycle-management.adoc[Content lifecycle management]
 
 ifeval::[{suma-content} == true]
-** xref:workflow-inplace-sles-upgrade.adoc[In-place Upgrade]
+** xref:workflow-inplace-sles-upgrade.adoc[In-place upgrade]
 endif::[]
 
 ** xref:workflow-product-upgrade-webui.adoc[Product upgrade via {webui}]
