--- a/modules/common-workflows/pages/workflow-configuration-management.adoc
+++ b/modules/common-workflows/pages/workflow-configuration-management.adoc
@@ -67,7 +67,7 @@ image::assign_client_cfg.png[scaledwidth=80%]
 
 == Example
 
-=== SLS State for Keeping Clients Updated
+=== SLS State for keeping clients updated
 ----
 include:
   - channels
