adjust table layout for opensuseleap channel names https://github.com/SUSE/spacewalk/issues/22169

--- a/modules/client-configuration/pages/clients-opensuseleap.adoc
+++ b/modules/client-configuration/pages/clients-opensuseleap.adoc
@@ -61,36 +61,18 @@ endif::[]
 
 ifeval::[{uyuni-content} == true]
 [[opensuse-channels-cli]]
-[cols="1,1,1,1,1,1,1,1", options="header"]
+[cols="1,1,1"]
 .{opensuse} Channels - CLI
 |===
 
-| OS Version
-| Base Channel
-| Client Channel
-| Updates Channel
-| Non-OSS Channel
-| Non-OSS Updates Channel
-| Backports Updates Channel
-| SLE Updates Channel
-
-| {opensuse} Leap 15.5
-| opensuse_leap15_5
-| opensuse_leap15_5-uyuni-client
-| opensuse_leap15_5-updates
-| opensuse_leap15_5-non-oss
-| opensuse_leap15_5-non-oss-updates
-| opensuse_leap15_5-backports-updates
-| opensuse_leap15_5-sle-updates
-
-| {opensuse} Leap 15.4
-| opensuse_leap15_4
-| opensuse_leap15_4-uyuni-client
-| opensuse_leap15_4-updates
-| opensuse_leap15_4-non-oss
-| opensuse_leap15_4-non-oss-updates
-| opensuse_leap15_4-backports-updates
-| opensuse_leap15_4-sle-updates
+| OS Version               | {opensuse} Leap 15.5		| {opensuse} Leap 15.4
+| Base Channel		   | opensuse_leap15_5		       	| opensuse_leap15_4
+| Client Channel	   | opensuse_leap15_5-uyuni-client     | opensuse_leap15_4-uyuni-client
+| Updates Channel	   | opensuse_leap15_5-updates	       	| opensuse_leap15_4-updates
+| Non-OSS Channel	   | opensuse_leap15_5-non-oss	       	| opensuse_leap15_4-non-oss
+| Non-OSS Updates Channel  | opensuse_leap15_5-non-oss-updates  | opensuse_leap15_4-non-oss-updates
+| Backports Updates Channel| opensuse_leap15_5-backports-updates| opensuse_leap15_4-backports-updates
+| SLE Updates Channel	   | opensuse_leap15_5-sle-updates      | opensuse_leap15_4-sle-updates
 
 |===
 
