Use short hostname Quick Start SAP https://bugzilla.suse.com/show_bug.cgi?id=1212695 https://github.com/SUSE/spacewalk/issues/22251

--- a/modules/specialized-guides/pages/qs-sap/configure.adoc
+++ b/modules/specialized-guides/pages/qs-sap/configure.adoc
@@ -41,7 +41,13 @@ Click btn:[Save] and apply the highstate to activate the formula.
 When the formula is activated, navigate to the menu:Formulas[Hana] tab, and complete the details in the form.
 
 Make sure you check [guimenu]``Install required packages`` to install everything you need on the client.
-In the [guimenu]``Nodes`` sections, type the hostname of the client to install the HANA database, and provide details for the installation.
+In the [guimenu]``Nodes`` sections, type the short hostname of the client to install the HANA database or the hostname you can retrieve on the command line  with:
+
+----
+salt '<client-name>' grains.item host
+----
+
+Provide further details for the installation.
 
 Complete the remaining details according to your environment, click btn:[Save], and apply the highstate.
 When the highstate is complete, you can go on to apply the cluster formula.
