Changes titles cases for the CW book (#2485)
* Changes titles cases for the CW book.

* Cont.

--- a/modules/common-workflows/pages/workflow-configuration-management.adoc
+++ b/modules/common-workflows/pages/workflow-configuration-management.adoc
@@ -1,5 +1,5 @@
 [[workflow-configuration-management]]
-= Configuration Management
+= Configuration management
 
 You can use configuration files and channels to manage configuration for your clients, rather than configuring each client manually.
 This workflow shows you how to use the {productname} {webui} to create a centrally managed configuration file, assign it to a Salt client, and apply the configuration.
@@ -67,7 +67,7 @@ image::assign_client_cfg.png[scaledwidth=80%]
 
 == Example
 
-=== SLS State for Keeping Clients Updated
+=== SLS State for keeping clients updated
 ----
 include:
   - channels
