--- a/modules/client-configuration/pages/contact-methods-migrate-traditional.adoc
+++ b/modules/client-configuration/pages/contact-methods-migrate-traditional.adoc
@@ -2,7 +2,11 @@
 = Migrate Traditional Clients to Salt Clients
 
 To migrate a system from a traditional client to a {salt}, the use can create the {salt} bootstrap script and re-register the client system with it.
-This could be done with three procedures: Create a bootstrap script, modify the bootstrap script, and run the bootstrap script to register the client.
+
+This could be done with three procedures: 
+* create a bootstrap script, 
+* modify the bootstrap script, and 
+* run the bootstrap script to register the client.
 
 
 
