--- a/modules/client-configuration/pages/contact-methods-migrate-traditional.adoc
+++ b/modules/client-configuration/pages/contact-methods-migrate-traditional.adoc
@@ -72,7 +72,7 @@ ORG_GPG_KEY=
 
 [NOTE]
 ====
-By default, the bootstrap script will try to install [package]``venv-salt-minion`` for Salt clients if it's available in the bootstrap repository and [package]``salt-minion`` if there is no Salt bundle in the bootstrap repository.
+By default, the bootstrap script will try to install [package]``venv-salt-minion`` for {salt} clients if it is available in the bootstrap repository, or [package]``salt-minion`` if there is no {salt} bundle in the bootstrap repository.
 It is posible to avoid installing Salt bundle and keep using [package]``salt-minion`` if you need it for some reason.
 
 For more information, see xref:client-configuration:contact-methods-saltbundle.adoc[Salt Bundle].
