--- a/modules/client-configuration/pages/contact-methods-migrate-traditional.adoc
+++ b/modules/client-configuration/pages/contact-methods-migrate-traditional.adoc
@@ -82,7 +82,7 @@ For more information, see xref:client-configuration:contact-methods-saltbundle.a
 
 == Run bootstrap script
 
-As the final step, you run the bootstrap script to migrate and register clients.
+As the final step, run the bootstrap script to migrate and register clients.
 
 
 .Procedure: Running the Bootstrap Script
