--- a/modules/client-configuration/pages/contact-methods-migrate-traditional.adoc
+++ b/modules/client-configuration/pages/contact-methods-migrate-traditional.adoc
@@ -88,7 +88,7 @@ As the final step, run the bootstrap script to migrate and register clients.
 .Procedure: Running the Bootstrap Script
 
 . On the {productname} Server, log in as root.
-  At the command prompt, and change to the bootstrap directory:
+  At the command prompt, change to the bootstrap directory:
 +
 
 ----
