--- a/modules/client-configuration/pages/contact-methods-migrate-traditional.adoc
+++ b/modules/client-configuration/pages/contact-methods-migrate-traditional.adoc
@@ -14,7 +14,7 @@ This could be done with three procedures:
 
 First you create a bootstrap script with the {webui} as a template.
 
-.Procedure: Creating a Bootstrap Script
+.Procedure: Creating a bootstrap script
 . In the {productname} {webui}, navigate to menu:Admin[Manager Configuration > Bootstrap Script].
 . In the [guimenu]``SUSE Manager Configuration - Bootstrap`` dialog, verify that the [guimenu]``Bootstrap using Salt`` checkbox is checked.
 . The required fields are pre-populated with values derived from previous installation steps.
