--- a/modules/client-configuration/pages/contact-methods-migrate-traditional.adoc
+++ b/modules/client-configuration/pages/contact-methods-migrate-traditional.adoc
@@ -32,7 +32,7 @@ https://<example.com>/pub/bootstrap/bootstrap.sh
 
 == Modify bootstrap script
 
-In the next step, you modify the bootstrap script according as needed.
+In the next step, you modify the bootstrap script as needed.
 It is important that you set your activation key.
 Navigate to menu:Home[Overview] and, in the [guimenu]``Tasks`` box, click [guimenu]``Manage Activation Keys``.
 All keys created for channels are listed on this page.
