--- a/modules/client-configuration/pages/contact-methods-migrate-traditional.adoc
+++ b/modules/client-configuration/pages/contact-methods-migrate-traditional.adoc
@@ -34,7 +34,8 @@ https://<example.com>/pub/bootstrap/bootstrap.sh
 
 In the next step, you modify the bootstrap script as needed.
 It is important that you set your activation key.
-Navigate to menu:Home[Overview] and, in the [guimenu]``Tasks`` box, click [guimenu]``Manage Activation Keys``.
+Navigate to menu:Home[Overview].
+In the [guimenu]``Tasks`` box, click [guimenu]``Manage Activation Keys``.
 All keys created for channels are listed on this page.
 You must enter the full name of the key you wish to use in the bootstrap script exactly as presented in the key field.
 For more information about activation keys, see xref:client-configuration:activation-keys.adoc[].
