--- a/modules/client-configuration/pages/contact-methods-migrate-traditional.adoc
+++ b/modules/client-configuration/pages/contact-methods-migrate-traditional.adoc
@@ -37,7 +37,7 @@ It is important that you set your activation key.
 Navigate to menu:Home[Overview].
 In the [guimenu]``Tasks`` box, click [guimenu]``Manage Activation Keys``.
 All keys created for channels are listed on this page.
-You must enter the full name of the key you wish to use in the bootstrap script exactly as presented in the key field.
+Enter the full name of the key you wish to use in the bootstrap script exactly as presented in the key field.
 For more information about activation keys, see xref:client-configuration:activation-keys.adoc[].
 
 .Procedure: Modifying a Bootstrap Script
