--- a/modules/client-configuration/pages/contact-methods-migrate-traditional.adoc
+++ b/modules/client-configuration/pages/contact-methods-migrate-traditional.adoc
@@ -86,7 +86,7 @@ For more information, see xref:client-configuration:contact-methods-saltbundle.a
 As the final step, run the bootstrap script to migrate and register clients.
 
 
-.Procedure: Running the Bootstrap Script
+.Procedure: Running the bootstrap script
 
 . On the {productname} Server, log in as root.
   At the command prompt, change to the bootstrap directory:
