--- a/modules/client-configuration/pages/contact-methods-migrate-traditional.adoc
+++ b/modules/client-configuration/pages/contact-methods-migrate-traditional.adoc
@@ -97,7 +97,8 @@ cd /srv/www/htdocs/pub/bootstrap/
 ----
 +
 
-. Run this command to execute the bootstrap script on the client; replace [systemitem]``EXAMPLE.COM`` with the host name of your client:
+. Run the following command to execute the bootstrap script on the client. 
+  Replace [systemitem]``EXAMPLE.COM`` with the hostname of your client:
 +
 
 ----
