--- a/modules/client-configuration/pages/contact-methods-migrate-traditional.adoc
+++ b/modules/client-configuration/pages/contact-methods-migrate-traditional.adoc
@@ -106,7 +106,7 @@ cat bootstrap-migrate-to-salt.sh | ssh root@EXAMPLE.COM /bin/bash
 ----
 +
 
-. Alternatively, on the client, run this command:
+. Alternatively, on the client, run the command:
 +
 
 ----
