--- a/modules/client-configuration/pages/contact-methods-migrate-traditional.adoc
+++ b/modules/client-configuration/pages/contact-methods-migrate-traditional.adoc
@@ -119,7 +119,7 @@ The script downloads the required dependencies.
 
 . When the script has finished running, you can check that your client is registered correctly by opening the {productname} {webui} and navigating to menu:Systems[Overview] to ensure the new client is listed.
 
-. In case of trouble with registering the new Salt client, open the {productname} {webui} and navigate to menu:Salt[Keys] to accept the client key.
+. In case of trouble with registering the new {salt} client, open the {productname} {webui} and navigate to menu:Salt[Keys] to accept the client key.
 
 [WARNING]
 ====
