--- a/modules/client-configuration/pages/contact-methods-migrate-traditional.adoc
+++ b/modules/client-configuration/pages/contact-methods-migrate-traditional.adoc
@@ -40,7 +40,7 @@ All keys created for channels are listed on this page.
 Enter the full name of the key you wish to use in the bootstrap script exactly as presented in the key field.
 For more information about activation keys, see xref:client-configuration:activation-keys.adoc[].
 
-.Procedure: Modifying a Bootstrap Script
+.Procedure: Modifying a bootstrap script
 . On your {productname} Server, as root at the command line change to the bootstrap directory with:
 +
 ----
