--- a/modules/client-configuration/pages/contact-methods-migrate-traditional.adoc
+++ b/modules/client-configuration/pages/contact-methods-migrate-traditional.adoc
@@ -1,5 +1,5 @@
 [[contact-methods-migrate-trad]]
-= Migrate Traditional Clients to Salt Clients
+= Migrate traditional clients to {salt} clients
 
 To migrate a system from a traditional client to a {salt}, the use can create the {salt} bootstrap script and re-register the client system with it.
 
