--- a/modules/installation-and-upgrade/pages/client-requirements.adoc
+++ b/modules/installation-and-upgrade/pages/client-requirements.adoc
@@ -91,6 +91,10 @@ ifeval::[{suma-content} == true]
 | {x86_64}
 | {check}
 
+| {debian} 12
+| {x86_64}
+| {check}
+
 | {oracle} 7
 | {x86_64}, {aarch64}
 | {check}
@@ -212,6 +216,10 @@ ifeval::[{uyuni-content} == true]
 | {check}
 
 | {debian} 11
+| {x86_64}
+| {check}
+
+| {debian} 12
 | {x86_64}
 | {check}
 
