Documented Debian 12 as a supported client OS.

--- a/modules/client-configuration/pages/supported-features.adoc
+++ b/modules/client-configuration/pages/supported-features.adoc
@@ -114,6 +114,11 @@ ifeval::[{suma-content} == true]
 | {check}
 | {check}
 
+| {debian} 12
+| {x86_64}
+| {cross}
+| {check}
+
 | {debian} 11
 | {x86_64}
 | {cross}
