--- a/modules/client-configuration/pages/clients-debian.adoc
+++ b/modules/client-configuration/pages/clients-debian.adoc
@@ -68,6 +68,7 @@ The products you need for this procedure are:
 | OS Version  | Product Name
 | {debian} 10 | Debian 10
 | {debian} 11 | Debian 11
+| {debian} 12 | Debian 12
 |===
 
 include::snippets/addchannels_vendor_webui.adoc[]
@@ -83,6 +84,7 @@ The channels you need for this procedure are:
 | OS Version  | Product Name
 | {debian} 10 | debian-10-pool-amd64
 | {debian} 11 | debian-11-pool-amd64
+| {debian} 12 | debian-12-pool-amd64
 |===
 
 include::snippets/addchannels_vendor_cli.adoc[]
@@ -116,6 +118,12 @@ The channels you need for this procedure are:
 | debian-11-amd64-uyuni-client
 | debian-11-amd64-main-updates-uyuni
 | debian-11-amd64-main-security-uyuni
+
+| {debian} 12
+| debian-12-pool-amd64-uyuni
+| debian-12-amd64-uyuni-client
+| debian-12-amd64-main-updates-uyuni
+| debian-12-amd64-main-security-uyuni
 
 |===
 
