--- a/modules/installation-and-upgrade/pages/client-requirements.adoc
+++ b/modules/installation-and-upgrade/pages/client-requirements.adoc
@@ -72,12 +72,12 @@ ifeval::[{suma-content} == true]
 | {check}
 | {check}
 
-| {almalinux} 8
+| {almalinux} 9
 | {x86_64}, {aarch64}
 | {cross}
 | {check}
 
-| {almalinux} 9
+| {almalinux} 8
 | {x86_64}, {aarch64}
 | {cross}
 | {check}
@@ -95,6 +95,11 @@ ifeval::[{suma-content} == true]
 | {centos} 7
 | {x86_64}, {aarch64}
 | {check}
+| {check}
+
+| {debian} 12
+| {x86_64}
+| {cross}
 | {check}
 
 | {debian} 11
@@ -235,6 +240,11 @@ ifeval::[{uyuni-content} == true]
 | {centos} 7
 | {x86_64}, {ppc64le}, {aarch64}
 | {check}
+| {check}
+
+| {debian} 12
+| {x86_64}
+| {cross}
 | {check}
 
 | {debian} 11
