--- a/modules/administration/pages/disconnected-setup.adoc
+++ b/modules/administration/pages/disconnected-setup.adoc
@@ -191,6 +191,6 @@ This results in data corruption.
 
 [NOTE]
 ====
-Be aware that if server.susemanager.fromdir is set, {productname} won't be able to check if SCC credentials are valid or not.
+Be aware that if [literal]``server.susemanager.fromdir`` is set, {productname} will not be able to check if {scc} credentials are valid or not.
 Instead, a warning sign will be displayed and no SCC online check will be performed.
 ====
