--- a/modules/installation-and-upgrade/pages/server-intro.adoc
+++ b/modules/installation-and-upgrade/pages/server-intro.adoc
@@ -6,7 +6,7 @@ To determine which upgrade procedure you need, look at which part of the version
 
 [NOTE]
 ====
-The version number below are just examples.
+The version numbers below are just examples.
 Do not understand them as most recent available options.
 {suse} uses these numbers for illustrative purposes only!
 ====
