--- a/modules/installation-and-upgrade/pages/server-intro.adoc
+++ b/modules/installation-and-upgrade/pages/server-intro.adoc
@@ -14,7 +14,7 @@ Do not understand them as most recent available options.
 
 
 Major Version Upgrade (X Upgrade)::
-Such a major upgrade usually is an upgrade from X.Y to X+1.0 or to X+1.1, where Y is the latest minor version of the X series.
+Major upgrade is usually an upgrade from X.Y to X+1.0 or to X+1.1, where Y is the latest minor version of the X series.
 For example:
 
 * From version 3.2 to 4.0 or to 4.1 (upgrading directly from 3.2 to 4.2 or later is not supported).
