--- a/modules/installation-and-upgrade/pages/server-intro.adoc
+++ b/modules/installation-and-upgrade/pages/server-intro.adoc
@@ -22,7 +22,7 @@ For example:
 * See xref:installation-and-upgrade:server-x.adoc[].
 
 Minor Version Upgrade (Y Upgrade)::
-Upgrading to the next minor version.
+Minor upgrade refers to upgrading to the next minor version, from X.Y to X.Y+1.
 This is often referred to as a product migration, service pack migration, or SP migration.
 Such a minor upgrade is an upgrade from X.Y to X.Y+1.
 For example:
