--- a/modules/installation-and-upgrade/pages/server-intro.adoc
+++ b/modules/installation-and-upgrade/pages/server-intro.adoc
@@ -28,7 +28,10 @@ For example:
 
 * From 4.2 to 4.3.
 
-If you take a closer look, you always upgrade from and to the latest patch level of the minor version.
+[IMPORTANT]
+====
+You always upgrade from and to the latest patch level of the minor version.
+====
 For example, from 4.2.12 to 4.3.8.
 
 * See xref:installation-and-upgrade:server-y.adoc[].
