--- a/modules/installation-and-upgrade/pages/server-y.adoc
+++ b/modules/installation-and-upgrade/pages/server-y.adoc
@@ -33,7 +33,7 @@ It takes a copy of the old database, thus be sure to have at least enough space 
 // FIXME: For 5.0/5.1, this could probably be deleted
 //        server-migrator.sh ???
 ////
-== Preparing Upgrade to 4.3
+== Preparing the upgrade to 4.3
 
 Before you start the upgrade process you must deactive the Python 2 module ([package]``sle-module-python2``) on the old 4.1.x or 4.2.x {productname} Server.
 In case of 4.1.x, on the command line, as root, run:
