--- a/modules/installation-and-upgrade/pages/server-x.adoc
+++ b/modules/installation-and-upgrade/pages/server-x.adoc
@@ -1,5 +1,5 @@
 [[server-x]]
-= Server - Major Version Upgrade (X Upgrade)
+= Server - Major version upgrade (X upgrade)
 
 This type of upgrade applies for an upgrade from 3.2 to 4.0.
 
