--- a/modules/installation-and-upgrade/pages/upgrade-intro.adoc
+++ b/modules/installation-and-upgrade/pages/upgrade-intro.adoc
@@ -22,7 +22,7 @@ To determine which upgrade procedure you need, look at which part of the version
 ====
 The version numbers below are just examples.
 Do not understand them as most recent available options.
-{suse} uses these numbers for illustrative purposes only!
+{suse} uses these numbers for illustrative purposes only.
 ====
 
 Major Version Upgrade (X Upgrade)::
