normalization per feedback

--- a/modules/installation-and-upgrade/pages/server-intro.adoc
+++ b/modules/installation-and-upgrade/pages/server-intro.adoc
@@ -37,8 +37,10 @@ For example, from 4.2.12 to 4.3.8.
 * See xref:installation-and-upgrade:server-y.adoc[].
 
 Patch Level Upgrade (Z Upgrade)::
-* Upgrading within the same minor version.
+Upgrading within the same minor version.
 This is often referred to as a maintenance update or MU.
-For example, upgrading from 4.3.7 to 4.3.8.
+For example:
+
+* From 4.3.7 to 4.3.8.
 
 * See xref:installation-and-upgrade:server-z.adoc[].
