--- a/modules/installation-and-upgrade/pages/upgrade-intro.adoc
+++ b/modules/installation-and-upgrade/pages/upgrade-intro.adoc
@@ -26,27 +26,30 @@ Do not understand them as most recent available options.
 ====
 
 Major Version Upgrade (X Upgrade)::
-Upgrading to the next major version.
-Such a major upgrade usually is an upgrade from X.Y to X+1.0 or to X+1.1, where Y is the latest minor version of the X series.
+Major upgrade is usually an upgrade from X.Y to X+1.0 or to X+1.1, where Y is the latest minor version of the X series.
 For example:
 
 * From version 3.2 to 4.0 or to 4.1 (upgrading directly from 3.2 to 4.2 or later is not supported).
 
 Minor Version Upgrade (Y Upgrade)::
-Upgrading to the next minor version.
+Minor upgrade refers to upgrading to the next minor version, from X.Y to X.Y+1.
 This is often referred to as a product migration, service pack migration, or SP migration.
-Such a minor upgrade is an upgrade from X.Y to X.Y+1.
 For example:
 
 * From 4.2 to 4.3.
 
-If you take a closer look, you always upgrade from and to the latest patch level of the minor version.
+[IMPORTANT]
+====
+You always upgrade from and to the latest patch level of the minor version.
+====
 For example, from 4.2.12 to 4.3.8.
 
 Patch Level Upgrade (Z Upgrade)::
 Upgrading within the same minor version.
 This is often referred to as a maintenance update or MU.
-For example, upgrading from 4.3.7 to 4.3.8.
+For example:
+
+* From 4.3.7 to 4.3.8.
 
 If you are upgrading the {productname} Server, see xref:installation-and-upgrade:server-intro.adoc[].
 endif::[]
